# quotes

./: .gitignore  Cargo.toml  Makefile  README.md  Shuttle.toml
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  IntroModal.jsx  Results.jsx  SearchBar.jsx  api.js  store.js  theme.js
frontend/src/Welcome/: Welcome.jsx
python/: convert.py  create_sparse_embeddings.ipynb
src/: config.json  main.rs  pinecone.rs  splade.rs
