[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
candle-core = { git = "https://github.com/peridotml/candle.git", version = "0.4.0" }
candle-nn = { git = "https://github.com/peridotml/candle.git", version = "0.4.0" }
candle-transformers = { git = "https://github.com/peridotml/candle.git", version = "0.4.0" }
reqwest = { version="0.11.24", features=["json"] }
serde = "1.0.196"

serde_json = "1.0.113"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
tokenizers = "0.15.2"
tokio = "1.28.2"
tower-http = {version ="0.5.1", features = ["fs"]}
tracing = "0.1.40"
